[gd_scene load_steps=3 format=2]

[ext_resource path="res://Road.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="Button" type="Button" parent="."]
margin_left = 177.024
margin_top = 239.245
margin_right = 257.024
margin_bottom = 259.245
text = "Start game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 178.572
margin_top = 276.146
margin_right = 258.572
margin_bottom = 296.146
text = "Manual"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 179.985
margin_top = 315.218
margin_right = 259.985
margin_bottom = 335.218
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 146.0
margin_top = 237.0
margin_right = 304.0
margin_bottom = 381.0
text = "Move left : Left arrow
Move right: Right  arrow
Move up : Up arrow
Move down : down arrow
Pause : P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile" type="Label" parent="Label"]
margin_left = 42.2168
margin_top = -24.9733
margin_right = 88.2168
margin_bottom = -10.9733
text = "Manual"

[node name="Back" type="Button" parent="Label"]
margin_left = 101.083
margin_top = 112.975
margin_right = 143.083
margin_bottom = 132.975
text = "Back"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Label/Back" to="." method="_on_Back_pressed"]
